package com.directi.training.isp.exercise;

public interface BasicDoorOperations {
    void lock();
    void unlock();
    void open();
    void close();
}
