package com.directi.training.isp.exercise;

public interface ProximitySensitiveDoor {
    void proximityCallback();
}
