package com.directi.training.isp.exercise;

public interface TimeSensitiveDoor {
    void timeOutCallback();
}
